--- a/task13/less&css/1.less
+++ b/task13/less&css/1.less
@@ -2,23 +2,30 @@ body {
     margin: 0;
     background: #f0f0f0;
 }
+
 p {
     margin: 0;
 }
-ul,li {
+
+ul,
+li {
     margin: 0;
     padding: 0;
     list-style: none;
 }
+
 @blue: #29bde0;
 @yellow: #fbb435;
-
+.pointer {
+    cursor: pointer;
+}
 header {
     line-height: 2.75rem;
     background: @blue;
     img {
         width: 1.2rem;
         margin-left: 1rem;
+        .pointer;
     }
 }
 
@@ -41,9 +48,11 @@ header {
         border-right: .15rem solid;
         border-top: .15rem solid;
         transform: rotate(45deg);
+        .pointer;
     }
 }
-div {
+
+.box {
     position: relative;
     margin: 0 5%;
     background: #fff;
@@ -52,9 +61,10 @@ div {
         display: block;
         line-height: 2.8rem;
         margin: 0;
-         color: @yellow;
-         background-color: #fff;
-         border-bottom: solid .07rem @yellow;
+        color: @yellow;
+        background-color: #fff;
+        border-bottom: solid .07rem @yellow;
+        
     }
     span {
         display: block;
@@ -62,19 +72,21 @@ div {
         margin: 1rem 10%;
         color: #fff;
         background: @blue;
+        .pointer;
     }
     p {
         font-size: .75rem;
         color: #9a9a9a;
-    }    
+    }
     &::after {
         content: "";
         position: fixed;
         top: 20.5rem;
         right: 7%;
         border-left: .85rem solid #fbb435;
-    border-bottom: .85rem solid transparent;
-    border-top: .85rem solid transparent;
+        border-bottom: .85rem solid transparent;
+        border-top: .85rem solid transparent;
+        .pointer;
     }
     li:first-child {
         background-color: @blue;
@@ -85,9 +97,42 @@ div {
         height: .5rem;
         border-radius: 50%;
         background-color: #f0f0f0;
+        .pointer;
         &:hover {
             background-color: @blue;
         }
     }
-    
+}
+
+#menu {
+    display: none;
+}
+
+#menu:checked~.main {
+    transform: translateX(9rem);
+}
+
+.menu {
+    overflow: hidden;
+    ul:nth-child(2) {
+        position: absolute;
+        width: 9rem;
+        height: 15rem;
+        background: #fff;
+        padding-top: 2.75rem;
+        li {
+            text-align: center;
+            line-height: 2.5rem;
+            .pointer;
+            &:hover {
+                background: @blue;
+                color: #fff;
+            }
+        }
+    }
+    .main {
+        position: relative;
+        background: #f0f0f0;
+        transition: all 0.25s;
+    }
 }
