--- a/task12/less&css/2.less
+++ b/task12/less&css/2.less
@@ -136,6 +136,12 @@ header {
       p {
           
           font-size: .9rem;
+          span:last-child {
+              display: block;
+              overflow: hidden;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+          }
       }
       li>span {
           padding-left: 1rem;
