--- a/task1415/less&css/1.less
+++ b/task1415/less&css/1.less
@@ -1,3 +1,113 @@
-body {
-    margin: 0;
+@import "omnipotent";
+
+h3 {
+    margin-top: 7rem;
+    margin-bottom: 3rem;
+    .center;
 }
+
+
+#container {
+    width: 100%;
+    overflow: hidden;
+    /*隐藏溢出的图片*/
+    .pic {
+        width: 400%;
+        /*4张图的宽度*/
+        
+        animation-name: focusmap;
+        animation-duration: 12s;
+        animation-iteration-count: infinite;
+        li {
+            width: 25%;
+            float: left;
+            
+            font-size: 0;
+            img {
+                width: 100%;
+                max-height: 600px;
+            }
+        }
+    }
+    @keyframes focusmap {
+        0% {
+            left: 0;
+        }
+        33.3% {
+            margin-left: -100%;
+        }
+        66.6% {
+            margin-left: -200%;
+        }
+        100% {
+            margin-left: -300%;
+            ;
+        }
+    }
+}
+
+.frame {
+    
+    
+    div {
+        width: 3.2rem;
+        height: 3.2rem;
+        margin: 3rem auto 0;
+    }
+    span {
+      .block;
+      margin: 2rem 0;
+      .font(1.1rem);
+      .center;
+    }
+    p {
+        width: 13rem;
+        .auto;
+        color: #999;
+    }
+    .rocket {
+        background:~"url(../img/img66.png) -18% 22% /209%";
+    }
+    .book {
+        background:~"url(../img/img66.png) -8% 40.7% /201%";
+    }
+    .relation {
+        
+        background:~" url(../img/img66.png) -15% 32.5% /198%";
+    }
+    
+
+}
+.people {
+    margin-top: 3.8rem;
+
+    padding: 5rem 0 0 6rem;
+    box-sizing: border-box;
+    border-left: .08rem dashed #dedede;
+    @media all and (max-width: 991px){
+        padding: 0;
+        border: 0;
+        .center;
+    }
+    span {
+        padding-left: 1.6rem;
+        color: @green;
+        background: ~"url(../img/img66.png) -4% 48.1%/193%";
+
+    }
+    p {
+        color: #999;
+        line-height: 2rem;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
