--- a/task1415/less&css/omnipotent.less
+++ b/task1415/less&css/omnipotent.less
@@ -18,7 +18,8 @@ p {
 // 变量
 @green: #29b078;
 @white: #fff;
-
+@gray: #999;
+@orange: #fe6611;
 
 
 
@@ -33,6 +34,7 @@ p {
 .container {
     margin: auto;
     
+    
     @media all and (min-width: 768px) {
         width: 750px;
     }
@@ -43,6 +45,13 @@ p {
         width: 1170px;
     }
 }
+.row {
+    @media all and (max-width: 767px) {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
 
 .hidden-xs {
     @media all and (max-width: 767px) {
@@ -98,7 +107,7 @@ p {
     }
 }
 
-.flex-md-3 {
+.flex-md-4 {
     .flex;
     @media all and (max-width: 991px) {
         .block;
@@ -106,11 +115,51 @@ p {
     &>div {
         width: 25%;
         @media all and (max-width: 991px) {
-            .width;
+            width: auto;
         }
     }
     
 }
+.between-md-4 {
+    .between;
+    @media all and (max-width: 991px) {
+        .block;
+    }
+    &>div {
+        width: 23%;
+        @media all and (max-width: 991px) {
+            width: auto;
+        }
+    }
+}
+.between-md-5 {
+    .between;
+    @media all and (max-width: 991px) {
+        .block;
+    }
+    &>div {
+        width: 19%;
+        @media all and (max-width: 991px) {
+            width: auto;
+        }
+    }
+}
+.flex-md-3-2-1 {
+    .flex;
+    flex-wrap: wrap;
+    &>div {
+        width: 32.3%;
+        margin-left: .5%;
+        margin-right: .5%;
+        @media all and (max-width: 991px) {
+            width: 48%;
+        }
+        @media all and (max-width: 767px) {
+            width: 99%;
+        }
+    }
+}
+
 
 
 
@@ -165,6 +214,9 @@ p {
 
 .center {
     text-align: center;
+}
+.box-shadow {
+    box-shadow: 0 0 0.18rem #888;
 }
 
 
