--- a/task1415/less&css/1.less
+++ b/task1415/less&css/1.less
@@ -96,18 +96,143 @@ h3 {
 
     }
     p {
-        color: #999;
+        color: @gray;
         line-height: 2rem;
     }
 }
 
 
+.step {
+    position: relative;
+    margin-bottom: 3rem;
+    color: @gray;
+    @media all and (max-width: 991px) {
+        .center;
+    }
+    span:first-child {
+        .left;
+        width: 3rem;
+        height: 3rem;
+        line-height: 3rem;
+        
+        color: @green;
+        .box-shadow;
+        border-radius: 50%;
+        .center;
+        @media all and (max-width: 991px) {
+            float: none;
+            .block;
+            margin: 0 auto 1.5rem;
+        }
+    }
+    span:last-child {
+        line-height: 1.5rem;
+    }
+}
+.step-after::after {
+      content: "";
+      position: absolute;
+      top: .9rem;
+      right: -1.4rem;
+      width: 1.2rem;
+      height: 1.2rem;
+      background: ~"url(../img/img66.png) 3% 16.7%/586%";
+      @media all and (max-width: 991px) {
+          display: none;
+      }
+}
 
+.card {
+    .box-shadow;
+    padding-bottom: 1rem;
+    margin-bottom: 1rem;
+    div {
+        width: 6.25rem;
+        height: 6.25rem;
+        margin: auto;
+        background: ~"url(../img/img66.png) -11% -9.5%/125%";
+    }
+    span {
+        .block;
+        margin: 1.5rem 0 ;
+        .center;
+        font-weight: bold;
+    }
+    p {
+        
+        margin-left: .3rem;
+        color: @gray;
+    }
+}
 
+.circle {
+    .center;
+    span:first-child {
+        background: @green;
+    }
+    span {
+        .inline-block;
+        width: 1rem;
+        height: 1rem;
+        .box-shadow;
+        border-radius: 50%;
+    }
+    span:hover {
+        background: @green;
+    }
+}
 
+.log {
+    
+    height: 10rem;
+    margin-bottom: 2rem;
+    background: ~"url(../img/tt.png) 50% 44% /133%";
+    @media all and (max-width: 991px) {
+        width: 15rem !important;
+        margin: 0 auto 2rem;
+        background: ~"url(../img/log111.png) 50% 44% /80% no-repeat";
+    }
+    &:hover {
+        .box-shadow;
+        
+    }
+}
 
+.link {
+    margin-bottom: 1rem;
+    @media all and (max-width: 991px) {
+        .inline-block;
+        width: 48%;
+    }
+    li {
+        .inline-block;
+        width: 9.5%;
+        @media all and (max-width: 991px) {
+            .block;
+            width: auto;
+            margin: 1rem 0;
+            .center;
+        }
+        span {
+            position: relative; 
+            padding-left: .8rem;
+            box-sizing: border-box;
+            &::before {
+                content: "";
+                position: absolute;
+                top: .5rem;
+                left: 0;
+                width: .3rem;
+                height: .3rem;
+                border-radius: 50%;
+                background: @gray;
+            }
+            &:hover {
+                border-bottom: solid @green .07rem;
+            }
+        }
 
-
-
+    }
+}
 
 
