--- a/task12/less&css/1.css
+++ b/task12/less&css/1.css
@@ -108,6 +108,7 @@ ul li .two {
 .bottom {
   display: flex;
   align-items: center;
+  margin-bottom: 5rem;
   border-bottom: solid 0.07rem #e1e5e7;
 }
 .bottom span:first-child {
