--- a/task12/less&css/1.less
+++ b/task12/less&css/1.less
@@ -113,6 +113,7 @@ ul {
 .bottom {
     display: flex;
     align-items: center;
+    margin-bottom: 5rem;
     .border;
     span:first-child {
         flex: none;
