--- a/task1415/less&css/3.less
+++ b/task1415/less&css/3.less
@@ -23,7 +23,7 @@ h4 {
     @media all and (max-width: 767px) {
         border: 0;
     }
-    span:first-child {
+    .first-span {
         color: @gray;
         margin: 0;
         @media all and (max-width: 767px) {
@@ -36,6 +36,7 @@ h4 {
     }
     span {
         margin-left: 2rem;
+        color: #333;
         @media all and (max-width: 767px) {
             .block;
             .border-bottom;
