--- a/jstask2/css/3.css
+++ b/jstask2/css/3.css
@@ -1,92 +1,146 @@
 body {
   margin: 0;
-  background: #29bde0;
+  background: #f0f0f0;
+}
+p {
+  margin: 0;
 }
 header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  height: 3rem;
-  font-size: 1.4rem;
-  color: #fff;
-  border-bottom: solid #fff .07rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  line-height: 2.75rem;
+  font-size: 0;
+  background: #29bde0;
 }
 header img {
   width: .8rem;
   margin-left: .5rem;
-  padding-right: .8rem;
+  vertical-align: middle;
 }
-header div {
-  position: relative;
-  width: 1.5rem;
-  height: 1.5rem;
-  margin-right: .5rem;
-}
-header div::before {
-  content: "";
-  position: absolute;
-  top: 50%;
-  width: 1.5rem;
-  height: .2rem;
-  margin-top: -0.1rem;
-  transform: rotate(45deg);
-  background-color: #fff;
-}
-header div::after {
-  content: "";
-  position: absolute;
-  left: 50%;
-  width: .2rem;
-  height: 1.5rem;
-  margin-left: -0.1rem;
-  transform: rotate(45deg);
-  background-color: #fff;
-}
-header + div {
-  text-align: center;
-  position: relative;
-  width: 70%;
-  height: 21rem;
-  margin: 3rem auto;
-  background: #ffedc5;
-  border: solid .15rem #fff;
-}
-header + div span:first-child {
-  position: absolute;
-  left: 50%;
-  top: -1rem;
-  width: 2rem;
+header + p {
   line-height: 2rem;
-  border-radius: 50%;
-  margin-left: -1rem;
-  color: red;
+  margin: 3rem 2% .25rem;
+  text-align: center;
   background: #fff;
-  border: solid #ffedc5 .1rem;
 }
-header + div img {
-  display: none;
-  width: 8rem;
-  margin: 4rem auto;
+p + div {
+  display: flex;
+  height: 10rem;
+  margin: 0 2%;
+  background: #fff;
 }
-header + div img:last-child {
-  display: block;
-  width: 8rem;
-  margin: 6rem auto 0;
+p + div img {
+  width: 2rem;
+  height: 2rem;
+  margin-left: 4%;
+  border-radius: 50%;
+  vertical-align: middle;
 }
-header + div span:nth-child(4) {
-  display: none;
+p + div span {
+  font-size: .8rem;
+  vertical-align: middle;
 }
-button {
-  display: block;
-  width: 75%;
+p + div span span {
+  vertical-align: initial;
+}
+p + div > div {
+  width: 50%;
+}
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+ul {
+  margin: .25rem 2%;
+  padding: .5rem 1rem;
+  background: #fff;
+}
+ul li {
+  display: flex;
+  color: #ccc;
   line-height: 3rem;
-  margin: auto;
-  font-size: 1.2rem;
+  border-bottom: solid #ccc .07rem;
+  overflow: hidden;
+}
+ul li span {
+  word-break: keep-all;
+}
+ul li input {
+  width: 100%;
+  color: orange;
   outline: none;
   border: none;
-  color: #fff;
-  background: orange;
 }
-#transmit {
+ul + div {
+  margin: 0 2%;
+  padding: 1rem 0;
+  background: #fff;
+  text-align: center;
+}
+ul + div input {
+  width: 2rem;
+  height: 1.5rem;
+  border-radius: .15rem;
+  outline: none;
+  border: none;
+  color: green;
+  background: #ccc;
+  margin: 0 .5rem;
+  text-align: center;
+}
+ul + div span {
+  vertical-align: middle;
+}
+ul + div span:first-child {
+  font-size: 1rem;
+}
+ul + div span:last-child {
+  font-size: .8rem;
+  color: orange;
+}
+div + button {
+  width: 96%;
+  height: 3rem;
+  margin-left: 2%;
+  margin-top: 1rem;
+  font-size: 1.2rem;
+  background: orange;
+  border: none;
+  outline: none;
+}
+button + div {
   display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(61, 61, 61, 0.8);
+}
+button + div div {
+  width: 70%;
+  margin: 10rem auto;
+  background: #fff;
+  border-radius: .15rem;
+}
+button + div div span {
+  display: block;
+  padding: 4rem 0 0 2rem;
+}
+button + div div button {
+  float: left;
+  width: 50%;
+  padding-top: 1rem;
+  outline: none;
+  border: none;
+  border-top: solid #ccc .07rem;
+  height: 4rem;
+  background: #fff;
+  box-sizing: border-box;
+}
+button + div div button:nth-child(2) {
+  border-right: solid .07rem #ccc;
 }
